Modify comment layout style

--- a/donate.html
+++ b/donate.html
@@ -172,7 +172,7 @@
         </div>
     </header>
     <section id="body">
-        <div id="body-container" class="container">
+        <div class="container body-container">
             <!-- 捐赠 -->
             <div class="row">
                 <div>
@@ -1676,7 +1676,10 @@
                     </table>
                 </div>
             </div>
-            <!-- 多说评论框 -->
+            
+        </div>
+        <div  class="container body-container margin-top-16">
+            <!-- 评论框 -->
             <div class="row">
                 <div id="comments">
                     <!-- 评论框 start -->
