--- a/gay_friends.html
+++ b/gay_friends.html
@@ -172,58 +172,58 @@
         </div>
     </header>
     <section id="body">
-        <div id="body-container" class="container">
+        <div class="container body-container">
             <div class="row">
                 <h1 class="content-title">好基友们</h1>
                 <p align="center">以下是我的好基友们，他们既是Android牛人，也是活跃在社区，乐于分享帮助他人，推动技术进步的有为青年，以及其他一些有用的、有意思的网站。</p>
                 <br/>
                 <div id="gay_friends_list" class="link-image-list">
-	                <ul>
-	                    <li>
-	                        <a href="http://gank.io" title="干货集中营，每日分享妹子图 和 技术干货，还有供大家中午休息的休闲视频">
-	                            <img src="http://ww1.sinaimg.cn/large/610dc034gw1f1lnnpb9tej203n01sdfn.jpg" />
-	                        </a>
-	                    </li>
-	                    <li>
-	                        <a href="http://stormzhang.com" title="Android开发者 + Ruby语言爱好者 + Google脑残粉，爱技术，爱尝鲜，爱开源，爱设计，也爱赚钱！ 热爱并沉溺于移动互联网，Want to make a good app!">
-	                            <img src="http://stormzhang.com/image/avatar_64.png" />
-	                        </a>
-	                    </li>
-	                    <li>
-	                        <a href="http://www.codekk.com" title="codeKK，专注于开源项目源码解析及优秀开源项目的分享">
-	                            <img src="http://www.codekk.com/images/codekk-com-130-64.png" />
-	                        </a>
-	                    </li>
-	                    <li>
-	                        <a href="http://www.trinea.cn/" title="Trinea，目前在滴滴出行担任技术专家，主攻 Java 和 Android，专于性能调优和框架设计。">
-	                            <img src="http://www.codekk.com/images/trinea-cn-130-64.png" />
-	                        </a>
-	                    </li>
-	                    <li>
-	                        <a href="http://www.liaohuqiu.net" title="秋百万，Make it better.">
-	                            <img src="http://ww2.sinaimg.cn/large/86e2ff85gw1f1qvio0f2ej203m01s0sl.jpg" />
-	                        </a>
-	                    </li>
-	                    <li>
-	                        <a href="http://droidyue.com/" title="技术小黑屋，Android 工程师，Infoq译者， 2015 GDG Devfest讲师;不是90后，89年出生的保定人在北京;喜欢终端上完成操作，对GUI有点偏见;一个优秀的程序员应该是一位艺术家，其代码不可增不可减。">
-	                            <img src="http://7jpolu.com1.z0.glb.clouddn.com/droidyue_com.png" />
-	                        </a>
-	                    </li>
-	                    <li>
-	                        <a href="http://drakeet.me" title="Drakeet">
-	                            <img src="http://ww4.sinaimg.cn/large/86e2ff85gw1f1jt6vd4snj203m01sjra.jpg" />
-	                        </a>
-	                    </li>
-	                    <li>
-	                        <a href="http://hukai.me" title="Hi，我是胡凯，就职于腾讯从事Android开发的工作。">
-	                            <img src="http://hukai.me/images/avatar/130_64.jpg" />
-	                        </a>
-	                    </li>
-	                    <li>
-	                        <a href="http://androidweekly.cn" title="Android 开发技术周报,汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。">
-	                            <img src="http://7xrhuv.com1.z0.glb.clouddn.com/androidweekly_cn.png" />
-	                        </a>
-	                    </li>
+                    <ul>
+                        <li>
+                            <a href="http://gank.io" title="干货集中营，每日分享妹子图 和 技术干货，还有供大家中午休息的休闲视频">
+                                <img src="http://ww1.sinaimg.cn/large/610dc034gw1f1lnnpb9tej203n01sdfn.jpg" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://stormzhang.com" title="Android开发者 + Ruby语言爱好者 + Google脑残粉，爱技术，爱尝鲜，爱开源，爱设计，也爱赚钱！ 热爱并沉溺于移动互联网，Want to make a good app!">
+                                <img src="http://stormzhang.com/image/avatar_64.png" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://www.codekk.com" title="codeKK，专注于开源项目源码解析及优秀开源项目的分享">
+                                <img src="http://www.codekk.com/images/codekk-com-130-64.png" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://www.trinea.cn/" title="Trinea，目前在滴滴出行担任技术专家，主攻 Java 和 Android，专于性能调优和框架设计。">
+                                <img src="http://www.codekk.com/images/trinea-cn-130-64.png" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://www.liaohuqiu.net" title="秋百万，Make it better.">
+                                <img src="http://ww2.sinaimg.cn/large/86e2ff85gw1f1qvio0f2ej203m01s0sl.jpg" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://droidyue.com/" title="技术小黑屋，Android 工程师，Infoq译者， 2015 GDG Devfest讲师;不是90后，89年出生的保定人在北京;喜欢终端上完成操作，对GUI有点偏见;一个优秀的程序员应该是一位艺术家，其代码不可增不可减。">
+                                <img src="http://7jpolu.com1.z0.glb.clouddn.com/droidyue_com.png" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://drakeet.me" title="Drakeet">
+                                <img src="http://ww4.sinaimg.cn/large/86e2ff85gw1f1jt6vd4snj203m01sjra.jpg" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://hukai.me" title="Hi，我是胡凯，就职于腾讯从事Android开发的工作。">
+                                <img src="http://hukai.me/images/avatar/130_64.jpg" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://androidweekly.cn" title="Android 开发技术周报,汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。">
+                                <img src="http://7xrhuv.com1.z0.glb.clouddn.com/androidweekly_cn.png" />
+                            </a>
+                        </li>
                         <li>
                             <a href="http://www.race604.com" title="专注 Android 移动应用开发，在开发中积累和成长。">
                                 <img src="http://ws2.sinaimg.cn/large/006tNc79ly1fgt5qreedyj303m01s0sl.jpg" />
@@ -304,16 +304,19 @@
                                 <img src="http://ws4.sinaimg.cn/large/006tNbRwly1fh92xjlh14j303m01sjr8.jpg" />
                             </a>
                         </li>
-	                </ul>
-            	</div>
+                    </ul>
+                </div>
             </div>
+            
+        </div>
+        <div class="container body-container margin-top-16">
             <div class="row">
-	            <div id="comments">
-	            	<!-- 评论框 start -->
-					<div id="comments-container"></div>
-					<!-- 论框 end -->
-	            </div>
-        	</div>
+                <div id="comments">
+                    <!-- 评论框 start -->
+                    <div id="comments-container"></div>
+                    <!-- 论框 end -->
+                </div>
+            </div>
         </div>
     </section>
     <div class="zh-backtotop">
