--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         </ul>
     </div>
     <section id="body">
-        <div id="body-container" class="container">
+        <div class="container body-container">
             <div class="row">
                 <div>
                     <h1 id="introduction" class="content-title" align="center">AndroidDevTools</h1>
@@ -4475,6 +4475,8 @@
                 </div>
                 <!-- JiaThis Button END -->
             </div>
+        </div>
+        <div class="container body-container margin-top-16">
             <div class="row">
                 <div id="comments">
                     <!-- 评论框 start -->
