--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         })();
     </script>
     <!-- GrowingIO End -->
+    <link rel="stylesheet" type="text/css" href="static/css/gray-style.css">
 </head>
 
 <body data-target=".content-nav">
@@ -249,7 +250,7 @@
         <div class="container body-container">
             <div class="row">
                 <div>
-                    <h1 id="introduction" class="content-title" align="center">AndroidDevTools</h1>
+                <h1 id="introduction" class="content-title" align="center">AndroidDevTools</h1>
                     <p>收集整理Android开发所需的Android SDK、开发中用到的工具、Android开发教程、Android设计规范，免费的设计素材等。</p>
                     <p>欢迎大家推荐自己在Android开发过程中用的好用的工具、学习开发教程、用到设计素材。如果你觉得本站对你有用，你可以点击底部的分享按钮，把本站分享到社交网络让你的小伙伴和更多的人知道。</p>
                     <p>或者可以考虑对本站<a href="./donate.html"><strong>捐赠</strong></a>支持下，支持我把本站做的更好，帮助更多的人。目前支持支付宝和微信，金额随意。</p>
