--- a/donate.html
+++ b/donate.html
@@ -17,6 +17,7 @@
     <link rel="shortcut icon" href="static/image/favicon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="static/image/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="static/image/apple-touch-icon-114x114.png">
+    <link rel="stylesheet" type="text/css" href="static/css/gray-style.css">
     <!-- GrowingIO 统计 -->
     <script type='text/javascript'>
       var _vds = _vds || [];
