Add Android Studi 3.0 Preview7 link

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                                      Guides
                                     </a>
                                     <ul id="menu-dev-guides" class="dropdown-menu" role="menu" aria-labelledby="drop-dev-guides">
+                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#android-dev-docs">Android 开发文档</a></li>
                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#google-java-program-guide-cn">Google Java编程风格指南中文版</a></li>
                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#android-api-doc-cn">Android Api中文版</a></li>
                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#android-api-guide-cn">Android API指南中文版</a></li>
@@ -333,6 +334,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.0 Preview7 -->
+                            <tr>
+                                <td rowspan="5">3.0 Preview7</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.6/android-studio-ide-171.4182969-windows.zip">android-studio-ide-171.4182969-windows.zip</a>
+                                </td>
+                                <td>691703488 bytes</td>
+                                <td>2c0a4b6796285e50873a47d839205e4541faab5a33b558d94df0136d07913c4b</td>
+                                <td rowspan="5"><a href="http://ws1.sinaimg.cn/large/006tNc79ly1fhp153u2bzj31080ggn09.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.6/android-studio-ide-171.4182969-windows32.zip">android-studio-ide-171.4182969-windows32.zip</a>
+                                </td>
+                                <td>691174865 bytes</td>
+                                <td>f6c98d50b5158bf2a3c7c6b056b928cdeb16f3d478e1bed1d8e2cabaca500bc9</td>
+                            </tr>
+                            <tr>
+                                <td> Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.6/android-studio-ide-171.4182969-mac.zip">android-studio-ide-171.4182969-mac.dmg</a>
+                                </td>
+                                <td>690996996 bytes</td>
+                                <td>455134beeac2b1ca8f0a58f39ca4ccc5724c22525980db3094c34d4c606d753b</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.6/android-studio-ide-171.4182969-linux.zip">android-studio-ide-171.4182969-linux.zip</a>
+                                </td>
+                                <td>690163289 bytes</td>
+                                <td>b15c6d3256685a2569216dbb48d45724f2ada0dd55707fce57e6619071994668</td>
+                            </tr>
                             <!-- 3.0 Preview6 -->
                             <tr>
                                 <td rowspan="5">3.0 Preview6</td>
@@ -3519,6 +3555,10 @@
                 </div>
                 <div id="android-dev-guides">
                     <h2>Android Dev Guides</h2>
+                    <div id="android-dev-docs">
+                        <h4>Android 开发文档(无需番羽土啬)</h4>
+                        <p>地址：<a href="https://developer.android.google.cn/index.html">https://developer.android.google.cn/index.html</a></p>
+                    </div>
                     <div id="google-java-program-guide-cn">
                         <h4>Google Java编程风格指南中文版</h4>
                         <p>英文地址：<a href="http://google-styleguide.googlecode.com/svn/trunk/javaguide.html">http://google-styleguide.googlecode.com/svn/trunk/javaguide.html</a>
