修改右侧浮动广告栏样式

--- a/index.html
+++ b/index.html
@@ -175,20 +175,25 @@
             </div>
         </div>
     </header>
-    <div id="auto-scroll-ad-box" style="z-index: 10; right: 0px; position: absolute; top: 1512px;">
+    <div id="auto-scroll-ad-box" style="z-index: 10; right: 0px; position: absolute; top: 1012px;">
         <div class="ad-float-right">
             <a href="http://hencoder.com" title="扔物线辞职在家憋了一年的大招，良心之作。" onclick="trackOutboundLink('http://hencoder.com', 'AD-HenCoder', 'click');" target="_blank">
-                <img src="http://ws3.sinaimg.cn/large/006tKfTcly1fh6h6gafp8j304605kq33.jpg">
+                <img src="http://ws4.sinaimg.cn/large/006tKfTcly1fhw3x0gn80j303m03mjrd.jpg">
             </a>
         </div>
         <div class="ad-float-right">
-            <a href="http://t.cn/Ro1OZoN" title="Raspberry Pi 3 Model B 树莓派3代控制器 含系统卡 电源 散热片 保护外壳--奥松机器人RobotBase" onclick="trackOutboundLink('http://t.cn/Ro1OZoN', 'AD-Amazon-RaspberryPi-3-MB', 'click');" target="_blank">
-                <img src="http://ws3.sinaimg.cn/large/006tKfTcly1fheu2sq17tj304605kq2w.jpg">
+            <a href="" title="脉脉不得语的公众号" onclick="trackOutboundLink('http://www.androidweekly.cn', 'AD-Wechat-Me', 'click');" target="_blank">
+                <img src="http://ws3.sinaimg.cn/large/006tKfTcly1fhw3x145mrj303m03mmx3.jpg">
             </a>
         </div>
         <div class="ad-float-right">
             <a href="http://t.cn/RKtmj6v" title="遵循公约的应用，后台不费电、手机不卡顿，跟 iPhone 一样省心。" onclick="trackOutboundLink('http://t.cn/RKtmj6v', 'GreenAndroid', 'click');" target="_blank">
-                <img src="http://ws4.sinaimg.cn/large/006tKfTcly1fhetfnhwh2j304605k3yg.jpg">
+                <img src="http://ws2.sinaimg.cn/large/006tKfTcly1fhw3x0z64zj303m03m0sm.jpg">
+            </a>
+        </div>
+        <div class="ad-float-right">
+            <a href="http://t.cn/Ro1OZoN" title="Raspberry Pi 3 Model B 树莓派3代控制器 含系统卡 电源 散热片 保护外壳--奥松机器人RobotBase" onclick="trackOutboundLink('http://t.cn/Ro1OZoN', 'AD-Amazon-RaspberryPi-3-MB', 'click');" target="_blank">
+                <img src="http://ws1.sinaimg.cn/large/006tKfTcly1fhw3x0odfmj303m03m746.jpg">
             </a>
         </div>
     </div>
@@ -4584,7 +4589,7 @@
     <!--   浮动广告      -->
     <script>
         var lastScrollY = 0;
-        var initTop = 340;
+        var initTop = 160;
 
         function heartBeat() {
             var diffY = 0;
