add android studio preivew8 link

--- a/index.html
+++ b/index.html
@@ -320,6 +320,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.0 Preview8 -->
+                            <tr>
+                                <td rowspan="5">3.0 Preview8</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.7/android-studio-ide-171.4195411-windows.zip">android-studio-ide-171.4195411-windows.zip</a>
+                                </td>
+                                <td>738515511 bytes</td>
+                                <td>1a4f22745ba618f2cf994ec3cd664f1a38b76a4998075d2b409bf8c7ce887952</td>
+                                <td rowspan="5"><a href="http://ws1.sinaimg.cn/large/006tNc79ly1fhp153u2bzj31080ggn09.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.7/android-studio-ide-171.4195411-windows32.zip">android-studio-ide-171.4195411-windows32.zip</a>
+                                </td>
+                                <td>737986888 bytes</td>
+                                <td>f849bec4485518b5b6bc326534aecec87a2dd6da9f89996c013fb8f2eff27e09</td>
+                            </tr>
+                            <tr>
+                                <td> Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.7/android-studio-ide-171.4195411-mac.zip">android-studio-ide-171.4195411-mac.dmg</a>
+                                </td>
+                                <td>737809610 bytes</td>
+                                <td>d3035eb9ff2afbf239f07f0c97d9ea4d9988fefdfcf669c88114059fa7e07c9e</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.7/android-studio-ide-171.4195411-linux.zip">android-studio-ide-171.4195411-linux.zip</a>
+                                </td>
+                                <td>736975317 bytes</td>
+                                <td>f2f7a260e1c115c73df1a51c9f939f64485bfbbd5631581a1358425d08caf0fb</td>
+                            </tr>
                             <!-- 3.0 Preview7 -->
                             <tr>
                                 <td rowspan="5">3.0 Preview7</td>
