Add Android Studio Preview9 link

--- a/index.html
+++ b/index.html
@@ -320,6 +320,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.0 Preview9 -->
+                            <tr>
+                                <td rowspan="5">3.0 Preview9</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.8/android-studio-ide-171.4220116-windows.zip">android-studio-ide-171.4220116-windows.zip</a>
+                                </td>
+                                <td>736696300 bytes</td>
+                                <td>646154ec9424d171b73809151287432963d413c7b992632edde51b0d978ea7f2</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1fi57xgbhsdj31kw0k7q9m.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.8/android-studio-ide-171.4220116-windows32.zip">android-studio-ide-171.4220116-windows32.zip</a>
+                                </td>
+                                <td>736167677 bytes</td>
+                                <td>564b41de2201514ffa50d0fed30a31cf495d6d071abc933b72d008aec07ed862</td>
+                            </tr>
+                            <tr>
+                                <td> Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.8/android-studio-ide-171.4220116-mac.zip">android-studio-ide-171.4220116-mac.dmg</a>
+                                </td>
+                                <td>735983880 bytes</td>
+                                <td>05c550fdf5c7005add2d23704ce0b2278b496a8beb48ce2b38bdd71e667da98e</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.8/android-studio-ide-171.4220116-linux.zip">android-studio-ide-171.4220116-linux.zip</a>
+                                </td>
+                                <td>735151725 bytes</td>
+                                <td>8b184719596e24085aa1fa31f966200b5d530b33a8f616b07cac2c5e4c0d5c09</td>
+                            </tr>
                             <!-- 3.0 Preview8 -->
                             <tr>
                                 <td rowspan="5">3.0 Preview8</td>
