--- a/index.html
+++ b/index.html
@@ -198,51 +198,58 @@
         </div>
     </div>
 
-    <div class="banner has-dots">
+    <div class="banner has-dots" id="ad-banner-list">
         <ul>
-            <li style="background-image: url(http://ww4.sinaimg.cn/large/006tNc79ly1fem3vspxegj31e90g478v.jpg); width: 25%;">
+            <li style="background-image: url(https://ws2.sinaimg.cn/large/006tKfTcly1fi5syvw31dj31jk0go48a.jpg); width: 25%;" data-link="http://t.cn/R9ics5h" data-tag="QiNiu-PLSV-li" data-event-type="click">
+                <div class="inner">
+                    <h1>七牛短视频 SDK 上线了</h1>
+                    <p style="color: darkgray"></p>
+                    <a class="btn" href="http://t.cn/R9ics5h" onclick="trackOutboundLink('http://t.cn/R9ics5h', 'QiNiu-PLSV', 'click');" title="">去用用</a>
+                </div>
+            </li>
+            <li style="background-image: url(http://ww4.sinaimg.cn/large/006tNc79ly1fem3vspxegj31e90g478v.jpg); width: 25%;" data-link="http://www.studyjamscn.com/" data-tag="StudyJams-li" data-event-type="click">
                 <div class="inner">
                     <h1>Google StudyJams</h1>
                     <p style="color: darkgray">Study Jams 活动可以帮助任何零基础的学员入门 Android 开发，无需任何费用，优秀学员还可以得到 Google 的纪念证书。</p>
                     <a class="btn" href="http://www.studyjamscn.com/" onclick="trackOutboundLink('http://www.studyjamscn.com/', 'StudyJams', 'click');" title="Study Jams 活动可以帮助任何零基础的学员入门 Android 开发，无需任何费用，优秀学员还可以得到 Google 的纪念证书">去瞅瞅</a>
                 </div>
             </li>
-            <li style="background-image: url(http://ww1.sinaimg.cn/large/006rtfu7jw1f5tv4qwp4pj31jk0go0tb.jpg); width: 25%;">
+            <li style="background-image: url(http://ww1.sinaimg.cn/large/006rtfu7jw1f5tv4qwp4pj31jk0go0tb.jpg); width: 25%;" data-link="http://www.androidweekly.cn" data-tag="AndroidWeekly-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android 开发技术周报</h1>
                     <p>汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。</p>
                     <a class="btn" href="http://www.androidweekly.cn" onclick="trackOutboundLink('http://www.androidweekly.cn', 'AndroidWeekly', 'click');" title="汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。">去订阅</a>
                 </div>
             </li>
-            <li style="background-image: url(http://ww1.sinaimg.cn/large/006rtfu7jw1f5tuy0n1fkj31jk0goq38.jpg); width: 25%;">
+            <li style="background-image: url(http://ww1.sinaimg.cn/large/006rtfu7jw1f5tuy0n1fkj31jk0goq38.jpg); width: 25%;" data-link="http://www.materialdoc.cn" data-tag="Materialdoc-li" data-event-type="click">
                 <div class="inner">
                     <h1>Material Design</h1>
                     <p>开发者参考文档</p>
                     <a class="btn" href='http://www.materialdoc.cn' onclick="trackOutboundLink('http://www.materialdoc.cn', 'Materialdoc', 'click');" title="开发者参考文档">去看看</a>
                 </div>
             </li>
-            <li style="background-image: url(http://ww3.sinaimg.cn/large/006tNc79gy1fe8qh3q29fj31jk0gotbc.jpg); width: 25%;">
+            <li style="background-image: url(http://ww3.sinaimg.cn/large/006tNc79gy1fe8qh3q29fj31jk0gotbc.jpg); width: 25%;" data-link="http://code-labs.cn" data-tag="CodeLabs-li" data-event-type="click">
                 <div class="inner">
                     <h1>Code Labs</h1>
                     <p>各种 Google 技术的 Code Labs</p>
                     <a class="btn" href='http://code-labs.cn' onclick="trackOutboundLink('http://code-labs.cn', 'CodeLabs', 'click');" title="各种 Google 技术的 Code Labs">去试试</a>
                 </div>
             </li>
-            <li style="background-image: url(http://ww3.sinaimg.cn/large/006tKfTcgy1fcnsyt9wogj31jk0go409.jpg); width: 25%;">
+            <li style="background-image: url(http://ww3.sinaimg.cn/large/006tKfTcgy1fcnsyt9wogj31jk0go409.jpg); width: 25%;" data-link="https://developer.android.google.cn" data-tag="Android-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android 7.0 Nougat</h1>
                     <p>Android 牛轧糖</p>
                     <a class="btn" href='https://developer.android.google.cn' onclick="trackOutboundLink('https://developer.android.google.cn', 'Android', 'click');" title="Android 牛轧糖">去尝尝</a>
                 </div>
             </li>
-            <li style="background-image: url(http://ww1.sinaimg.cn/large/006tKfTcgy1fcnsb53o2nj31jk0gojto.jpg); width: 25%;">
+            <li style="background-image: url(http://ww1.sinaimg.cn/large/006tKfTcgy1fcnsb53o2nj31jk0gojto.jpg); width: 25%;" data-link="https://developer.android.google.cn/studio/index.html" data-tag="AndroidStudio-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android Studio</h1>
                     <p>官方下载 Android Studio</p>
                     <a class="btn" href='https://developer.android.google.cn/studio/index.html' onclick="trackOutboundLink('https://developer.android.google.cn/studio/index.html', 'Android Studio', 'click');" title="官方下载 Android Studio">去下载</a>
                 </div>
             </li>
-            <li style="background-image: url(http://ww1.sinaimg.cn/large/006tKfTcgy1fcnsb4t09jj31jk0goq4c.jpg); width: 25%;">
+            <li style="background-image: url(http://ww1.sinaimg.cn/large/006tKfTcgy1fcnsb4t09jj31jk0goq4c.jpg); width: 25%;" data-link="https://developers.google.cn" data-tag="GoogleDevelopers-li" data-event-type="click">
                 <div class="inner">
                     <h1>Google Developers</h1>
                     <p>官方 Google 开发者网站</p>
@@ -4711,6 +4718,7 @@
         $(function() {
             $('.zh-backtotop').toTop();
         });
+        var bannerItem = $()
     </script>
     <script type="text/javascript">
         $(function() {
@@ -5219,7 +5227,22 @@
             }
         };
 
+        function addBannerItemClickEvent() {
+            var bannerItems = $('#ad-banner-list').find('ul>li').toArray();
+            console.log(Array.isArray(bannerItems));
+            bannerItems.forEach(function(element){
+                var link = $(element).attr('data-link'),
+                    tag = $(element).attr('data-tag'),
+                    type = $(element).attr('data-event-type');
+                $(element).bind('click', function(event) {
+                    trackOutboundLink(link, tag, type);
+                    window.location.href = link;
+                    console.log(link)
+                });
+            });
+        }
         initBookList();
+        addBannerItemClickEvent();
     </script>
 </body>
 
