Add Android Studio 3.0 Beta1 link

--- a/index.html
+++ b/index.html
@@ -327,6 +327,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.0 Beta1 -->
+                            <tr>
+                                <td rowspan="5">3.0 Beta1</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.9/android-studio-ide-171.4243858-windows.zip">android-studio-ide-171.4243858-windows.zip</a>
+                                </td>
+                                <td>738724877 bytes</td>
+                                <td>fc6d7d7927a144800b422c6a694a08ba9abbbed5138b917130cc4bd9f0779db0</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1fi57xgbhsdj31kw0k7q9m.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.9/android-studio-ide-171.4243858-windows32.zip">android-studio-ide-171.4243858-windows32.zip</a>
+                                </td>
+                                <td>738195131 bytes</td>
+                                <td>daca4a143b4362be819b9925feb7d41274102eed2fe22c5f189172e190ebd92d</td>
+                            </tr>
+                            <tr>
+                                <td> Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.9/android-studio-ide-171.4243858-mac.zip">android-studio-ide-171.4243858-mac.dmg</a>
+                                </td>
+                                <td>738013384 bytes</td>
+                                <td>6ba4995305e233713532f3f66fcc305a8ff635107ab12f36a4bb96fa1fc3e26b</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.9/android-studio-ide-171.4243858-linux.zip">android-studio-ide-171.4243858-linux.zip</a>
+                                </td>
+                                <td>737182794 bytes</td>
+                                <td>422cc6c85ee62186bdb81facd970c0058575dc45ba39f6fd8b326b430269f28c</td>
+                            </tr>
                             <!-- 3.0 Preview9 -->
                             <tr>
                                 <td rowspan="5">3.0 Preview9</td>
