Add Android Studio 3.0 Beta2 link

--- a/index.html
+++ b/index.html
@@ -327,6 +327,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.0 Beta2 -->
+                            <tr>
+                                <td rowspan="5">3.0 Beta2</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.10/android-studio-ide-171.4263559-windows.zip">android-studio-ide-171.4263559-windows.zip</a>
+                                </td>
+                                <td>738724956 bytes</td>
+                                <td>8bdbe855f20b5444a7ef4e5e0968ce02e6c8cdf3337b0828f5789ab1bb0d3054</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tNc79ly1fihgmkb2mkj31kw0lsn4m.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.10/android-studio-ide-171.4263559-windows32.zip">android-studio-ide-171.4263559-windows32.zip</a>
+                                </td>
+                                <td>738195210 bytes</td>
+                                <td>7c3a23e2ec5791eb001299afeb8a6576ceb6587399aff5da93303678a6265834</td>
+                            </tr>
+                            <tr>
+                                <td> Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.10/android-studio-ide-171.4263559-mac.zip">android-studio-ide-171.4263559-mac.dmg</a>
+                                </td>
+                                <td>738013480 bytes</td>
+                                <td>b2acdc0f9a13052d4e2870b302fe259fd710519ac4d90b0c1c928633a1b52b4f</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.10/android-studio-ide-171.4263559-linux.zip">android-studio-ide-171.4263559-linux.zip</a>
+                                </td>
+                                <td>737182862 bytes</td>
+                                <td>9c109f5cb3732cd9c31edb94657c10ba47c3cb4229ac4ff76a4683a27032ca2f</td>
+                            </tr>
                             <!-- 3.0 Beta1 -->
                             <tr>
                                 <td rowspan="5">3.0 Beta1</td>
