Add Android Oreo post link

--- a/index.html
+++ b/index.html
@@ -207,6 +207,13 @@
                     <a class="btn" href="http://t.cn/R9ics5h" onclick="trackOutboundLink('http://t.cn/R9ics5h', 'QiNiu-PLSV', 'click');" title="">去用用</a>
                 </div>
             </li>
+            <li style="background-image: url(https://ws4.sinaimg.cn/large/006tNc79ly1fitrz88tc8j31jk0goq71.jpg); width: 25%;" data-link="https://mp.weixin.qq.com/s/t_tXd0OWFUQZ1X2RB82qgw" data-tag="Android-Oreo-Weixin-li" data-event-type="click">
+                <div class="inner">
+                    <h1>Android Oreo</h1>
+                    <p style="color: darkgray">Android 8.0 现已推出</p>
+                    <a class="btn" href="https://mp.weixin.qq.com/s/t_tXd0OWFUQZ1X2RB82qgw" onclick="trackOutboundLink('https://mp.weixin.qq.com/s/t_tXd0OWFUQZ1X2RB82qgw', 'Android-Oreo-Weixin', 'click');" title="">去学学</a>
+                </div>
+            </li>
             <li style="background-image: url(http://ww4.sinaimg.cn/large/006tNc79ly1fem3vspxegj31e90g478v.jpg); width: 25%;" data-link="http://www.studyjamscn.com/" data-tag="StudyJams-li" data-event-type="click">
                 <div class="inner">
                     <h1>Google StudyJams</h1>
