修改 Banner 中按钮的样式

--- a/index.html
+++ b/index.html
@@ -221,14 +221,14 @@
                     <a class="btn" href="http://www.androidweekly.cn" onclick="trackOutboundLink('http://www.androidweekly.cn', 'AndroidWeekly', 'click');" title="汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。">去订阅</a>
                 </div>
             </li>
-            <li style="background-image: url(https://ws3.sinaimg.cn/large/006tNc79ly1fiu5wirrvsj31jk0gon4o.jpg); width: 25%;" data-link="https://developer.android.google.cn" data-tag="Android-li" data-event-type="click">
+            <li style="background-image: url(https://ws3.sinaimg.cn/large/006tNc79ly1fiu5wirrvsj31jk0gon4o.jpg); width: 25%;" data-link="https://developer.android.google.cn" data-tag="Android-8.0-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android 8.0 Oreo</h1>
                     <p>Android 奥利奥</p>
-                    <a class="btn" href='https://developer.android.google.cn' onclick="trackOutboundLink('https://developer.android.google.cn', 'Android', 'click');" title="Android 奥利奥">去尝尝</a>
+                    <a class="btn" href='https://developer.android.google.cn' onclick="trackOutboundLink('https://developer.android.google.cn', 'Android-8.0', 'click');" title="Android 奥利奥">去尝尝</a>
                 </div>
             </li>
-            <li style="background-image: url(https://ws2.sinaimg.cn/large/006tNc79ly1fiu5wi0cygj31jk0gon2g.jpg); width: 25%;" data-link="https://developer.android.google.cn/studio/index.html" data-tag="AndroidStudio-li" data-event-type="click">
+            <li style="background-image: url(https://ws2.sinaimg.cn/large/006tNc79ly1fiu5wi0cygj31jk0gon2g.jpg);" data-link="https://developer.android.google.cn/studio/index.html" data-tag="AndroidStudio-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android Studio</h1>
                     <p>官方下载 Android Studio</p>
