--- a/index.html
+++ b/index.html
@@ -228,6 +228,13 @@
                     <a class="btn" href='https://developer.android.google.cn' onclick="trackOutboundLink('https://developer.android.google.cn', 'Android-8.0', 'click');" title="Android 奥利奥">去尝尝</a>
                 </div>
             </li>
+            <li style="background-image: url(https://ws2.sinaimg.cn/large/006tNc79ly1fiu7q0q5h8j31jk0go770.jpg);" data-link="https://developer.android.google.cn/develop/index.html" data-tag="Android-Architecture-Components-li" data-event-type="click">
+                <div class="inner">
+                    <h1>Android Architecture Components</h1>
+                    <p>Android 架构组件</p>
+                    <a class="btn" href='https://developer.android.google.cn/develop/index.html' onclick="trackOutboundLink('https://developer.android.google.cn/develop/index.html', 'Android-Architecture-Components', 'click');" title="官方下载 Android Studio">去学习</a>
+                </div>
+            </li>
             <li style="background-image: url(https://ws2.sinaimg.cn/large/006tNc79ly1fiu5wi0cygj31jk0gon2g.jpg);" data-link="https://developer.android.google.cn/studio/index.html" data-tag="AndroidStudio-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android Studio</h1>
